--- a/hardware_interface/package.xml
+++ b/hardware_interface/package.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>animatronics_head_ros2</name>
+  <name>hardware_interface</name>
   <version>0.0.1</version>
-  <description>ROS2 package for animatronics head control with motor limits</description>
+  <description>Hardware interface package for animatronics head motor controllers</description>
   <maintainer email="user@todo.todo">User</maintainer>
   <license>TODO: License declaration</license>
 
   <depend>rclpy</depend>
-  <depend>trajectory_msgs</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
-  <depend>dynamixel_sdk</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
